# frago

./: .dockerignore  .env.cdp  .env.example  .gitattributes  .gitignore  .importlinter  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PRINCIPLE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  STEALTH_MODE.md  docker-compose.yml  function_mapping_report.html  function_mapping_report.json  install.ps1  install.sh  local_install.ps1  local_install.sh  pre-publish-checklist.md  pyproject.toml  test_stealth.html
.claude/commands/: auvima.evaluate.md  auvima.generate.md  auvima.merge.md  auvima.recipe.md  auvima.run.md  auvima.start.md  auvima.storyboard.md  auvima.test.md  auvima_recipe.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/docs/: sync-repo-business-logic.md
.frago/video_scripts/: example_github_intro.json  test_single_segment.json
.github/scripts/: validate_recipe.py
.github/workflows/: build-client.yml  validate-recipes.yml
community-recipes/: CONTRIBUTING.md  README.md  SECURITY.md
community-recipes/recipes/: .gitkeep
docs/: architecture.md  architecture.zh-CN.md  browser-support.md  browser-support.zh-CN.md  concepts.md  concepts.zh-CN.md  content-outline.md  developer.md  developer.zh-CN.md  development.md  development.zh-CN.md  examples.md  examples.zh-CN.md  guide-README.md  guide-implementation-spec.md  guide-system-plan.md  installation.md  installation.zh-CN.md  recipes.md  recipes.zh-CN.md  roadmap.md  roadmap.zh-CN.md  use-cases.md  use-cases.zh-CN.md  user-guide.md  user-guide.zh-CN.md  协作.pen
docs/archive/: README.md  README.zh-CN.md  installation.zh-CN.md  user-guide.zh-CN.md
docs/knowledge/: app.js  data.js  index.html  styles.css
examples/workflows/: fetch_academic_paper.py  project_specific_task.md  project_specific_task.py  upwork_batch_extract.md  upwork_batch_extract.py
guide_source/: meta.json
guide_source/en/: 01-getting-started.md  02-interface-faq.md
guide_source/zh-CN/: 01-getting-started.md  02-interface-faq.md  05-troubleshooting.md
project_management/: I18N_GUIDE.md
project_management/claude_session_format/: CLAUDE_CODE_SESSION_FORMAT.md  check_claude_session_format.py
remotion-intro/: package-lock.json  package.json  tsconfig.json
remotion-intro/src/: FragoIntro.tsx  Root.tsx  styles.ts
scripts/: check_arch.sh  configure-claude-endpoints.sh  dev_launch_extension.py  generate_extension_id.py
scripts/generate/: cdp_annotate.sh  cdp_clear_effects.sh  cdp_highlight.sh  cdp_pointer.sh  cdp_spotlight.sh
scripts/install/: test-docker.sh  test-reset.ps1  test-reset.sh
scripts/share/: cdp_click.sh  cdp_common.sh  cdp_exec_js.sh  cdp_get_content.sh  cdp_get_title.sh  cdp_help.sh  cdp_navigate.sh  cdp_screenshot.sh  cdp_scroll.sh  cdp_status.sh  cdp_wait.sh  cdp_zoom.sh  check_python_env.sh
scripts/test/: test_proxy_configuration.sh
specs/001-standardize-cdp-scripts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cdp-integration-refactor/: IMPLEMENTATION_SUMMARY_20251117.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-skill-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-recipe-architecture-refactor/: acceptance-checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-run-command-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-init-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-init-commands-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-gui-app-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-gui-design-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-agent-session-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-gui-tasks-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-vite-react-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-change-gui-into-web-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: chrome_cdp_launcher.py  chrome_cdp_launcher_v2.py.bakcup  pipeline_master.py  requirements.txt
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/bootstrap/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  main.rs
src-tauri/src/installer/: claude_code.rs  downloader.rs  frago.rs  launcher.rs  mod.rs  process.rs  uv.rs
src/auvima/: README.md  __init__.py
src/frago/: README.md  __init__.py  client_manager.py  compat.py
tests/: QUICK_TEST.sh  TESTING_GUIDE.md  __init__.py  conftest.py  manual_test_models.py
tests/agent_driver/: test_claude_done_detection.py  test_claude_driver_launch.py  test_claude_needs_input.py  test_claude_recipe_launch.py  test_claude_truly_idle.py  test_driver_phase1.py  test_pool.py  test_pool_idle_eviction.py  test_recipe_commands_passthrough.py  test_start_task_gate.py  test_tmux_session.py  test_transcript.py  test_transcript_streamer.py
tests/arch/: test_import_contracts.py
tests/cli/: test_agent_json_contract.py  test_agent_subcommands.py  test_agent_tmux_env.py  test_chrome_commands.py  test_daemon_commands.py  test_recipe_validate_exit_code.py
tests/contract/: __init__.py  test_cli_exit_codes.py  test_json_output.py  test_log_format.py
tests/extension/: test_anti_bot.py  test_batch1_parity.py  test_batch2_parity.py  test_browser_picker.py  test_lifecycle.py  test_manifest_dir.py  test_mvp_parity.py  test_profile_seed.py  test_visual_effects.py
tests/fixtures/: legacy_config_with_sync_repo_url.json
tests/integration/: __init__.py  (+9 more)
writings/: 2025-summary-zhCN.md  README.md
(+1199 files in other folders)
