[project]
name = "frago-cli"
version = "0.8.0"
description = "Frago - AI-driven multi-runtime automation framework with Chrome CDP, Python, and Shell support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Jamey Tsai", email = "caijia@frago.ai"}
]
keywords = ["cdp", "chrome", "devtools", "automation", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websocket-client>=1.9.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "pypinyin>=0.51.0",
    "python-slugify>=8.0.0",
    "rapidfuzz>=3.0.0",
    "arxiv>=2.3.1",
    "pyperclip>=1.8.0",
    "obsws-python>=1.8.0",
    "questionary>=2.1.0",
    "watchdog>=3.0.0",
    "pywebview>=6.1",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
frago = "frago.cli.main:cli"

[project.urls]
Homepage = "https://frago.ai"
Documentation = "https://docs.frago.ai"
Repository = "https://github.com/tsaijamey/frago.git"
Issues = "https://github.com/tsaijamey/frago/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frago"]

# 包含资源文件（slash 命令、示例 recipe、GUI assets）
include = [
    "src/frago/**/*.py",
    "src/frago/**/*.md",
    "src/frago/**/*.js",
    "src/frago/**/*.yaml",
    "src/frago/**/*.yml",
    "src/frago/**/*.sh",
    "src/frago/**/*.html",
    "src/frago/**/*.css",
]

# 排除前端源码（只保留构建产物 gui/assets/）
exclude = [
    "src/frago/gui/frontend/**",
]

[tool.setuptools]
exclude = ["examples*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=frago",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["frago"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
